Added to notebook

--- a/raw/generate-datasets.ipynb
+++ b/raw/generate-datasets.ipynb
@@ -12,18 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from glob import glob\n",
-    "import os"
+    "import numpy as np\n",
+    "import os\n",
+    "import re\n",
+    "from glob import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -332,20 +334,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Toki Pona: 1167017 English: 63119 Chinese: 0\n"
+      "Toki Pona: 1167019 English: 63119 Chinese: 0\n"
      ]
     }
    ],
    "source": [
     "# For each document, find the word count and add it all up\n",
     "print('Toki Pona:', int(documents['tok'].str.split().str.len().sum()), 'English:', int(documents['eng'].str.split().str.len().sum()), 'Chinese:', documents['cmn'].str.split().str.len().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the sentences and translations to a file.\n",
+    "documents.to_csv(os.path.expanduser(\"output-documents.tsv\"), sep='\\t', index=False)\n",
+    "\n",
+    "# Reload them and confirm that they are the same, convert NaNs to None\n",
+    "documents_copy = pd.read_csv(os.path.expanduser(\"output-documents.tsv\"), sep='\\t')\n",
+    "documents_copy = documents_copy.replace(np.nan, None)\n",
+    "\n",
+    "assert documents.equals(documents_copy)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapters and Translations\n",
+    "\n",
+    "Go through the files of books and screenplays and add their corresponding translated chapters to this dataset. These files are:\n",
+    "\n",
+    "|Folder|Language|Description|Length|\n",
+    "|------|--------|-----------|------|\n",
+    "|`bible`|Toki Pona and English|The Gospel of John|22 chapters|\n",
+    "|`screenplays`|Toki Pona and English|Monty Python and the Holy Grail|24 scenes|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chapters = pd.DataFrame(columns=['id', 'name', 'chapter_number', 'content_type', 'tok', 'eng', 'cmn'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Get the chapters for the gospel of john\n",
+    "'''\n",
+    "\n",
+    "tok_gospel_of_john = open(os.path.expanduser(f\"bible/tok/gospel of john.txt\"), \"r\", encoding=\"utf-8\").read()\n",
+    "tok_gospel_of_john_chapters = re.split('\\nkipisi[^\\.\\n]+\\n', tok_gospel_of_john)\n",
+    "\n",
+    "eng_gospel_of_john = open(os.path.expanduser(f\"bible/eng/gospel of john.txt\"), \"r\", encoding=\"utf-8\").read()\n",
+    "eng_gospel_of_john_chapters = list(filter(lambda x: x != '', map(lambda x: x.strip(), re.split('Chapter[^\\.\\n]+\\n', eng_gospel_of_john))))\n",
+    "\n",
+    "for i, (tok, eng) in enumerate(zip(tok_gospel_of_john_chapters, eng_gospel_of_john_chapters)):\n",
+    "    chapters.loc[len(chapters)] = [len(chapters), 'gospel of john', i + 1, BIBLE, tok, eng, None]\n",
+    "\n",
+    "print(len(tok_gospel_of_john_chapters), len(eng_gospel_of_john_chapters))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Get the chapters for the monty python screenplay\n",
+    "'''\n",
+    "\n",
+    "tok_monty_python = open(os.path.expanduser(f\"screenplays/tok/monty python.txt\"), \"r\", encoding=\"utf-8\").read()\n",
+    "tok_monty_python_chapters = re.split('\\nkipisi[^\\.\\n]+\\n', tok_monty_python)\n",
+    "\n",
+    "eng_monty_python = open(os.path.expanduser(f\"screenplays/eng/monty python.txt\"), \"r\", encoding=\"utf-8\").read()\n",
+    "eng_monty_python_chapters = list(filter(lambda x: x != '', map(lambda x: x.strip(), re.split('Scene \\d+\\n', eng_monty_python))))\n",
+    "\n",
+    "for i, (tok, eng) in enumerate(zip(tok_monty_python_chapters, eng_monty_python_chapters)):\n",
+    "    chapters.loc[len(chapters)] = [len(chapters), 'Monty Python and the Holy Grail', i + 1, SCREENPLAY, tok, eng, None]\n",
+    "\n",
+    "print(len(tok_monty_python_chapters), len(eng_monty_python_chapters))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toki Pona: 34077 English: 29438 Chinese: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For each document, find the word count and add it all up\n",
+    "print('Toki Pona:', int(chapters['tok'].str.split().str.len().sum()), 'English:', int(chapters['eng'].str.split().str.len().sum()), 'Chinese:', chapters['cmn'].str.split().str.len().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the sentences and translations to a file.\n",
+    "chapters.to_csv(os.path.expanduser(\"chapters.tsv\"), sep='\\t', index=False)\n",
+    "\n",
+    "# Reload them and confirm that they are the same, convert NaNs to None\n",
+    "chapters_copy = pd.read_csv(os.path.expanduser(\"chapters.tsv\"), sep='\\t')\n",
+    "chapters_copy = chapters.replace(np.nan, None)\n",
+    "\n",
+    "assert chapters.equals(chapters)"
    ]
   }
  ],
